# VScode_example

./: README.md  main.cpp
cmke_test/: CMakeLists.txt  README.md  main.cpp
inc/: add.h
opencv_sample/: opencv_sample.cpp
sample2/: main.cpp
sample_normal/: README.md
sample_normal/inc/: sub.h
sample_opencv_cmake/: CMakeLists.txt  build.bat
sample_opencv_mingw/: README.md  main.cpp
sample_pthread/: README.md
ubuntu/Ros_example/recognize_and_grasp/inc/: control.h  debug.h  recognize.h
ubuntu/Ros_example/recognize_and_grasp/src/: control.cpp  debug.cpp  main.cpp  recognize.cpp
ubuntu/cmke_example/: CMakeLists.txt  README.md  main.cpp
ubuntu/cmke_example/src/: add.cpp
ubuntu/normal/: main  main.cpp
ubuntu/normal/src/: add.cpp
ubuntu/opencv_cmake/: CMakeLists.txt  README.md  main.cpp
ubuntu/opencv_example/: opencv_example  opencv_example.cpp
ubuntu/opencv_mingw/: main
ubuntu/pcl_show_a_pcd/: CMakeLists.txt  pcl_show_a_pcd.cpp
ubuntu/pcl_test/: pcl_test.cpp
windows/cmke_example/src/: sub.cpp
windows/normal/: README.md
windows/opencv_cmake/: CMakeLists.txt  build.bat
windows/opencv_mingw/: README.md  main.cpp
windows/producer_consumer/: main.cpp
windows/pthread/: main.cpp
windows/pthread/load_h/: pthread.h
windows/stm32/F4/freeRTOS/.eide/: eide.json
windows/stm32/F4/freeRTOS/APP/: FreeRTOSConfig.h  main.c  my_math.h  stm32f4xx_it.c  system.c
windows/stm32/F4/freeRTOS/BSP/: dma.c  dma.h  gpio.h  pwm.c  timer.h
windows/stm32/F4/template/: .gitignore
windows/stm32/F4/template/.eide/: eide.json
windows/stm32/F4/template/APP/: main.c  my_math.c  system.c  system.h
windows/stm32/F4/template/BSP/: gpio.c  nvic.c  nvic.h  pwm.h  timer.c  usart.c  usart.h
